<resources>
    <string name="app_name">Mae</string>
    <string name="mae_date1">ဆႏၵမဲေပးရမည့္ ေန႔</string>
    <string name="mae_date2">"ႏိုဝင္ဘာလ ၈ရက္ေန႔ </string>
    <string name="let_mae_vote">ဆႏၵမဲေပးၾကပါစို႔</string>
    <string name="rule">ဆႏၵမဲေပးနည္း အဆင့္ဆင့္</string>
    <string name="go_to_website_link">Go to Website Link</string>
    <string name="time">မဲေပးရမည္႔အခ်ိန္ : မနက္ ၆နာရီ မွ ညေန ၄နာရီ ထိ ျဖစ္သည္</string>
    <string name="today">ယေန႔သည္ ဆႏၵမဲ ေပးရမည့္ေန႔ ျဖစ္သည္</string>
    <string name="developed_by_kyaw_thu">Developed By Kyaw Thu</string>
    <string name="credit_google_search_engine_facebook_source">Credit : Google Search Engine, Facebook Source</string>
    <string name="remind_later">Remind Later</string>
    <string name="got_it">Got It</string>
</resources>