<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/mae"
            android:textSize="20sp"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            android:text="@string/let_mae_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <TextView
            android:id="@+id/today"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginBottom="50dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="10dp"/>
                <TextView
                    android:gravity="center"
                    android:padding="15dp"
                    android:backgroundTint="#E8E0E0"
                    android:textColor="@color/colorTextPrimary"
                    android:background="@drawable/corner_round_background"
                    android:id="@+id/remind"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/remind_later" />
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="10dp"/>

                <TextView
                    android:gravity="center"
                    android:padding="15dp"
                    android:backgroundTint="#9F1515"
                    android:textColor="@android:color/white"
                    android:background="@drawable/corner_round_background"
                    android:id="@+id/gotIt"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/got_it" />
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="10dp"/>
            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

</LinearLayout>