<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/view"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/showHide"
                    android:background="@color/colorPrimary"
                    android:paddingTop="50dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/warning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/colorWarning" />
                    <View
                        android:layout_width="5dp"
                        android:layout_height="10dp"/>
                    <TextView
                        android:id="@+id/date"
                        android:textSize="16sp"
                        android:textColor="@color/colorWarning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:padding="20dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/mae"
                        android:layout_marginRight="5dp"
                        android:textSize="20sp"
                        android:textColor="@color/colorTextPrimary"
                        android:textStyle="bold"
                        android:text="@string/let_mae_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:backgroundTint="#FDD835"
                        android:background="@drawable/corner_round_background"
                        android:src="@drawable/how_to_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/colorWhite"/>
                    <ImageView
                        android:backgroundTint="#7CB342"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:background="@drawable/corner_round_background"
                        android:src="@drawable/how_to_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/colorWhite" />
                    <ImageView
                        android:backgroundTint="#D81B60"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:background="@drawable/corner_round_background"
                        android:src="@drawable/how_to_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/colorWhite" />
                </LinearLayout>
                <View
                    android:layout_width="10dp"
                    android:layout_height="50dp"/>

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"/>
                <TextView
                    android:id="@+id/website"
                    android:background="?selectableItemBackground"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#1E88E5"
                    android:text="@string/go_to_website_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="10dp"
                    android:layout_height="80dp"/>

                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/mae_date1"
                        android:layout_margin="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/mae_date1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:padding="5dp"
                        android:background="@color/colorTextPrimary"
                        android:id="@+id/mae_date2"
                        android:layout_margin="5dp"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWarning"
                        android:text="@string/mae_date2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/mae_time"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <View
                    android:layout_width="10dp"
                    android:layout_height="50dp"/>

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/view_background"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/rule"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold"
                    android:text="@string/rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="10dp"/>
                <ImageView
                    android:id="@+id/fullScreen"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="5dp"
                    android:src="@drawable/fullscreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/colorTextPrimary" />

            </LinearLayout>

            <androidx.viewpager.widget.ViewPager
                android:visibility="gone"
                android:foregroundGravity="center"
                android:id="@+id/viewPager"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="750dp"/>
            <LinearLayout
                android:id="@+id/bottom"
                android:background="@color/colorTextPrimary"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/credit_google_search_engine_facebook_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/developed_by_kyaw_thu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>